[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "status-cake-exporter"
version = "1.1.2"
description = ""
authors = ["Craig Gumbley <craiggumbley@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "status_cake_exporter"}]

[tool.pyright]
include = ["status_cake_exporter"]
reportMissingImports = false

[tool.isort]
profile = "black"

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "0.20.0"
statuscake-py = "^1.1.0b1"
typer = ">=0.9,<0.13"
typing-extensions = "^4.9.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = ">=24.2,<26.0"
pre-commit = ">=3.6.2,<5.0.0"
pyright = "^1.1.351"
isort = "^5.13.2"
darglint = "^1.8.1"

[tool.poetry.scripts]
status-cake-exporter = "status_cake_exporter.app:run"
